# chessConsole

./: CMakeLists.txt  README.md
file/: InitGame.txt
src/: Bishop.cpp  Bishop.h  Board.cpp  Board.h  Doxyfile  Engine.cpp  Engine.h  Game.cpp  Game.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Player.cpp  Player.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h  Tile.cpp  Tile.h  main.cpp
